--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,17 @@
 ---
+import Layout from "../layout/Layout.astro";
+import Presentacion from "../components/Presentacion..astro";
+import Carta from "../components/Carta.astro";
+import Historia from "../components/Historia";
+import Musica from "../components/Musica";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+  <Musica client:load />
+  <div class="container bg-zinc-900 px-7 py-5 md:mt-5 text-center m-auto">
+    <h1 class="text-5xl font-bold mb-5 text-red-600">NUESTRA HISTORIA</h1>
+    <Presentacion />
+    <Historia client:load />
+    <Carta />
+  </div>
+</Layout>
